added list methods

--- a/templates/relation.md.handlebars
+++ b/templates/relation.md.handlebars
@@ -1,7 +1,7 @@
 # Relation: {{title}}
 {{description}}
 
-**Resource:** [{{resource.href}}]({{resource.name}})
+**Resource:** [{{resource.name}}]({{resource.href}})
 
 {{#if templated}}
 ### Templating
